--- a/selfHostedAmazonDocs/package.json
+++ b/selfHostedAmazonDocs/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "ask-sdk": "^2.14.0"
+    "ask-sdk": "^2.14.0",
+    "aws-sdk": "^2.1692.0"
   },
   "name": "selfhostedamazondocs",
   "version": "1.0.0",
