--- a/selfHostedAmazonDocs/package.json
+++ b/selfHostedAmazonDocs/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ask-sdk": "^2.14.0",
-    "aws-sdk": "^2.1692.0"
+    "aws-sdk": "^2.1692.0",
+    "i18next": "^23.16.8"
   },
   "name": "selfhostedamazondocs",
   "version": "1.0.0",
