--- a/Lambda/package.json
+++ b/Lambda/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ask-sdk": "^2.14.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.8",
     "i18next": "^23.16.8"
   },
   "name": "selfhostedamazondocs",
