--- a/EC2/package.json
+++ b/EC2/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
   }
