--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,9 +9,11 @@
     "@mui/x-date-pickers": "^7.28.2",
     "ag-grid-react": "^33.1.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
