--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,8 @@
     "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
