--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     ],
     "*.{js,ts,json,css,md}": [
       "prettier --write"
-    ]
+    ],
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
