--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "styled-components": "^6.1.15"
   },
   "scripts": {
