--- a/AlexaSkill/RoomMitra/lambda/package.json
+++ b/AlexaSkill/RoomMitra/lambda/package.json
@@ -12,7 +12,6 @@
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
-    "sync-request":"6.1.0"
-    
+    "axios": "^1.7.8"
   }
 }
