--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 Lambda/node_modules/
 Lambda/*.zip
 Lambda/*.DS_Store
+./*DS_Store
+**/*.DS_Store
 Lambda/.env
 EC2/node_modules/
 EC2/.env
 EC2/config/*.pem
 webapp/node_modules/
+AlexaSkill/RoomMitra/lambda/config.js
+AlexaSkill/RoomMitra/lambda/.env
+AlexaSkill/RoomMitra/lambda/*.env
