--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "nvm": "^0.0.4"
   }
 }
