--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,45 @@ EC2/node_modules/
 EC2/.env
 EC2/config/*.pem
 webapp/node_modules/
+
+# Node
+node_modules/
+dist/
+build/
+
+# VS Code — track only settings.json
+.vscode/*
+!.vscode/settings.json
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+
+# Ignore build folders
+.cxx/
+build/
+.gradle/
+local.properties
+
+# Ignore IntelliJ/Android Studio specific files
+.idea/
+!.idea/codeStyles
+!.idea/runConfigurations
+!.idea/inspectionProfiles
+.idea/workspace.xml
+.idea/tasks.xml
+
+# Models 
+
+dynamodb-local-data/
+
 AlexaSkill/RoomMitra/lambda/config.js
 AlexaSkill/RoomMitra/lambda/.env
 AlexaSkill/RoomMitra/lambda/*.env
+
