--- a/Android/RoomMitra/app/src/main/AndroidManifest.xml
+++ b/Android/RoomMitra/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="false"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true">
 
         <activity
