--- a/Android/RoomMitra/app/src/main/AndroidManifest.xml
+++ b/Android/RoomMitra/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         android:label="@string/app_name"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true">
+        <service
+            android:name=".service.ScreenDimService"
+            android:enabled="true"
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
