--- a/EC2/package.json
+++ b/EC2/package.json
@@ -19,6 +19,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "sync-request": "6.1.0"
   }
 }
