prettier for terraform

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
       "prettier --write"
     ],
     "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,css,md}": "prettier --write",
+    "*.tf": [
+      "terraform fmt -recursive"
+    ]
   },
   "scripts": {
     "prepare": "husky install"
