--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -49,20 +49,25 @@ jobs:
             --instance-ids "${{ steps.find.outputs.instance_id }}" \
             --document-name "AWS-RunShellScript" \
             --comment "Deploy website ${{ github.sha }}" \
-            --parameters commands="[
-              \"set -e\",
-              \"export PATH=\\\"$PATH:/usr/local/bin:/usr/bin\\\"\",
-              \"mkdir -p ${SERVICE_PATH}/.deploy\",
-              \"chmod -R 777 ${SERVICE_PATH}/.deploy\",
-              \"aws s3 cp s3://${ARTIFACT_BUCKET}/website-${{ github.sha }}.zip /opt/roommitra/tmp/website.zip\",
-              \"rm -rf ${SERVICE_PATH}/.deploy/*\",
-              \"unzip -o /opt/roommitra/tmp/website.zip -d ${SERVICE_PATH}/.deploy\",
-              \"rm -rf /opt/roommitra/tmp/website.zip\",
-              \"cd ${SERVICE_PATH}/.deploy\",
-              \"npm ci\",
-              \"npm run build\",
-              \"rsync -a --delete ${SERVICE_PATH}/.deploy/ ${SERVICE_PATH}/\",
-              \"command -v pm2 >/dev/null || sudo npm i -g pm2\",
-              \"pm2 start ${SERVICE_PATH}/server-start.sh --name ${PM2_NAME} || pm2 reload ${PM2_NAME} --update-env\",
-              \"pm2 save\"
-            ]"
+            --parameters '{
+              "runAsEnabled": ["true"],
+              "runAsUser": ["appuser"],
+              "commands": [
+                "set -euo pipefail",
+                "export HOME=/home/appuser",
+                "export PATH=$HOME/.local/bin:/usr/local/bin:/usr/bin:/bin",
+                "mkdir -p /opt/roommitra/tmp /opt/roommitra/website/.deploy",
+                "aws s3 cp s3://roommitra-codedeploy/website-b44fc1ad39af1a221a68f1d234ad792ece24fffe.zip /opt/roommitra/tmp/website.zip",
+                "rm -rf /opt/roommitra/website/.deploy/*",
+                "unzip -o /opt/roommitra/tmp/website.zip -d /opt/roommitra/website/.deploy",
+                "rm -f /opt/roommitra/tmp/website.zip",
+                "cd /opt/roommitra/website/.deploy",
+                "node -v && npm -v || true",
+                "npm ci",
+                "npm run build",
+                "rsync -a --delete /opt/roommitra/website/.deploy/ /opt/roommitra/website/",
+                "command -v pm2 >/dev/null || npm i -g pm2",
+                "pm2 start /opt/roommitra/website/server-start.sh --name website || pm2 reload website --update-env",
+                "pm2 save"
+              ]
+            }'
