--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -13,7 +13,7 @@ env:
   ARTIFACT_BUCKET: roommitra-codedeploy
   INSTANCE_TAG_KEY: Name
   INSTANCE_TAG_VALUE: roommitra-ec2
-  SERVICE_PATH: /opt/roommitra/website
+  APP_DIR: /opt/roommitra/website
   PM2_NAME: website
 
 jobs:
@@ -33,7 +33,7 @@ jobs:
           zip -r ../website-${{ github.sha }}.zip . -x "*.git*"
 
       - name: Upload artifact to S3
-        run: aws s3 cp website-${{ github.sha }}.zip s3://${{ env.ARTIFACT_BUCKET }}/website-${{ github.sha }}.zip
+        run: aws s3 cp website-${{ github.sha }}.zip s3://${{ env.ARTIFACT_BUCKET }}/website/website-${{ github.sha }}.zip
 
       - name: Find instance by tag
         id: find
@@ -43,31 +43,39 @@ jobs:
             --query "Reservations[0].Instances[0].InstanceId" --output text)
           echo "instance_id=$ID" >> $GITHUB_OUTPUT
 
+      - name: Create SSM Parameters file
+        run: |
+          cat > /tmp/ssm-params.json <<EOL
+          {
+            "commands": [
+              "set -euo pipefail",
+              "export PATH=\"$PATH:/usr/local/bin:/usr/bin\"",
+              "mkdir -p ${APP_DIR}/.deploy",
+              "chmod -R 777 ${APP_DIR}/.deploy",
+              "aws s3 cp s3://${ARTIFACT_BUCKET}/website/website-${{ github.sha }}.zip /opt/roommitra/tmp/website.zip",
+              "rm -rf ${APP_DIR}/.deploy/*",
+              "unzip -o /opt/roommitra/tmp/website.zip -d ${APP_DIR}/.deploy",
+              "rm -rf /opt/roommitra/tmp/website.zip",
+              "cd ${APP_DIR}/.deploy",
+              "npm ci",
+              "npm run build",
+              "rsync -a --delete ${APP_DIR}/.deploy/ ${APP_DIR}/",
+              "command -v pm2 >/dev/null || sudo npm i -g pm2",
+              "pm2 start ${APP_DIR}/server-start.sh --name ${PM2_NAME} || pm2 reload ${PM2_NAME} --update-env",
+              "pm2 save"
+            ],
+            "executionTimeout": ["3600"]
+          }
+          EOL
+          echo "Wrote /tmp/ssm-params.json"
+
       - name: Deploy via SSM
         run: |
           aws ssm send-command \
+            --region ${{ env.AWS_REGION }} \
             --instance-ids "${{ steps.find.outputs.instance_id }}" \
             --document-name "AWS-RunShellScript" \
             --comment "Deploy website ${{ github.sha }}" \
-            --parameters '{
-              "runAsEnabled": ["true"],
-              "runAsUser": ["appuser"],
-              "commands": [
-                "set -euo pipefail",
-                "export HOME=/home/appuser",
-                "export PATH=$HOME/.local/bin:/usr/local/bin:/usr/bin:/bin",
-                "mkdir -p /opt/roommitra/tmp /opt/roommitra/website/.deploy",
-                "aws s3 cp s3://roommitra-codedeploy/website-b44fc1ad39af1a221a68f1d234ad792ece24fffe.zip /opt/roommitra/tmp/website.zip",
-                "rm -rf /opt/roommitra/website/.deploy/*",
-                "unzip -o /opt/roommitra/tmp/website.zip -d /opt/roommitra/website/.deploy",
-                "rm -f /opt/roommitra/tmp/website.zip",
-                "cd /opt/roommitra/website/.deploy",
-                "node -v && npm -v || true",
-                "npm ci",
-                "npm run build",
-                "rsync -a --delete /opt/roommitra/website/.deploy/ /opt/roommitra/website/",
-                "command -v pm2 >/dev/null || npm i -g pm2",
-                "pm2 start /opt/roommitra/website/server-start.sh --name website || pm2 reload website --update-env",
-                "pm2 save"
-              ]
-            }'
+            --parameters file:///tmp/ssm-params.json \
+            --output-s3-bucket-name "${ARTIFACT_BUCKET}/website/logs" \
+            --output-s3-key-prefix "ssm-outputs/${GITHUB_RUN_ID}" \
