update docker file path

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -37,7 +37,7 @@ jobs:
           IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
           echo "Building Docker image: $IMAGE_URI"
 
-          docker build -t $IMAGE_URI .
+          docker build -t $IMAGE_URI . -f ./website/Dockerfile
           docker push $IMAGE_URI
 
           echo "Image successfully pushed: $IMAGE_URI"
