--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -61,9 +61,8 @@ jobs:
           {
             "commands": [
               "set -euo pipefail",
-              "REG="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"",
-              "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}",\
-              
+              "REG=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com",
+              "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}",
               "sudo -u appuser -H bash -lc \"aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${REG}\"",
               "sudo -u appuser -H bash -lc \"docker pull ${IMAGE_URI}\"",
 
@@ -85,4 +84,4 @@ jobs:
             --instance-ids "${{ steps.find.outputs.instance_id }}" \
             --document-name "AWS-RunShellScript" \
             --comment "Deploy website ${{ github.sha }}" \
-            --parameters file:///tmp/ssm-params.json \
+            --parameters file:///tmp/ssm-params.json
