--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -70,7 +70,7 @@ jobs:
               "sudo -u appuser -H bash -lc \"docker rm website || true\"",
               "sudo -u appuser -H bash -lc \"pm2 delete website || true\"", 
               "sudo -u appuser -H bash -lc \"pm2 save\"", 
-              "sudo -u appuser -H bash -lc \"docker run -d --name website -p 3000:3000 ${IMAGE_URI}\"",
+              "sudo -u appuser -H bash -lc \"docker run -d --name website -p 3000:3000 ${IMAGE_URI}\""
             ],
             "executionTimeout": ["3600"]
           }
