--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -26,25 +26,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Collect meta
+        id: meta
+        run: |
+          echo "RUN_URL=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}" >> $GITHUB_ENV
+          echo "COMMIT_URL=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/commit/${GITHUB_SHA}" >> $GITHUB_ENV
+          echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          echo "AUTHOR_NAME=$(git show -s --format='%an' ${GITHUB_SHA})" >> $GITHUB_ENV
+
       - uses: slackapi/slack-github-action@v1.26.0
         with:
           channel-id: ${{ secrets.ENG_OPS_CHANNEL_ID }}
           payload: |
             {
               "blocks": [
-                { "type": "section", "text": { "type": "mrkdwn", "text": "*Deploy started* ⏰" } },
-                { "type": "section", "fields": [
-                    { "type": "mrkdwn", "text": "*Repo:*\n${{ github.repository }}" },
-                    { "type": "mrkdwn", "text": "*Ref:*\n${{ github.ref_name }}" },
-                    { "type": "mrkdwn", "text": "*Run:*\n#${{ github.run_number }}" }
-                ] }
+                { "type": "section",
+                  "text": { "type": "mrkdwn",
+                    "text": ":alarm_clock: *`website` Build started* for <${{ env.COMMIT_URL }}|${{ github.ref_name }}@${{ env.SHORT_SHA }}>"
+                  }
+                },
+                { "type": "context", "elements": [
+                  { "type": "mrkdwn", "text": "*Author:* ${{ env.AUTHOR_NAME }}" },
+                  { "type": "mrkdwn", "text": "*Workflow:* <${{ env.RUN_URL }}|open run>" }
+                ]}
               ]
             }
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-
-      - name: Checkout source
-        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -121,17 +132,43 @@ jobs:
             --parameters file:///tmp/ssm-params.json
 
       - uses: slackapi/slack-github-action@v1.26.0
+        if: ${{ success() }}
         with:
           channel-id: ${{ secrets.ENG_OPS_CHANNEL_ID }}
           payload: |
             {
               "blocks": [
-                { "type": "section", "text": { "type": "mrkdwn", "text": "*Deploy complete* :tada:" } },
-                { "type": "section", "fields": [
-                    { "type": "mrkdwn", "text": "*Repo:*\n${{ github.repository }}" },
-                    { "type": "mrkdwn", "text": "*Ref:*\n${{ github.ref_name }}" },
-                    { "type": "mrkdwn", "text": "*Run:*\n#${{ github.run_number }}" }
-                ] }
+                { "type": "section",
+                  "text": { "type": "mrkdwn",
+                    "text": ":white_check_mark: *`website` Build passed* for <${{ env.COMMIT_URL }}|${{ github.ref_name }}@${{ env.SHORT_SHA }}>"
+                  }
+                },
+                { "type": "context", "elements": [
+                  { "type": "mrkdwn", "text": "*Author:* ${{ env.AUTHOR_NAME }}" },
+                  { "type": "mrkdwn", "text": "*Workflow:* <${{ env.RUN_URL }}|open run>" }
+                ]}
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
+      # Failure message
+      - uses: slackapi/slack-github-action@v1.26.0
+        if: ${{ failure() }}
+        with:
+          channel-id: ${{ secrets.ENG_OPS_CHANNEL_ID }}
+          payload: |
+            {
+              "blocks": [
+                { "type": "section",
+                  "text": { "type": "mrkdwn",
+                    "text": ":x: *`website` Build failed* for <${{ env.COMMIT_URL }}|${{ github.ref_name }}@${{ env.SHORT_SHA }}>"
+                  }
+                },
+                { "type": "context", "elements": [
+                  { "type": "mrkdwn", "text": "*Author:* ${{ env.AUTHOR_NAME }}" },
+                  { "type": "mrkdwn", "text": "*Workflow:* <${{ env.RUN_URL }}|open run>" }
+                ]}
               ]
             }
         env:
