--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "devDependencies": {
-    "eslint": "^9.29.0",
+    "eslint": "8.57.0",
     "@eslint/js": "^9.29.0",
     "globals": "^15.11.0",
     "eslint-plugin-react": "^7.37.2",
