--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - chai/api-deploy
     paths:
       - 'api/**'
       - '.github/workflows/deploy-api.yml'
