--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,12 +1,13 @@
-name: Deploy Website
+name: Deploy api
 
 on:
   push:
     branches:
       - main
+      - chai/api-deploy
     paths:
-      - 'website/**'
-      - '.github/workflows/deploy-website.yml'
+      - 'api/**'
+      - '.github/workflows/deploy-api.yml'
 
 permissions:
   id-token: write
@@ -15,13 +16,14 @@ permissions:
 env:
   AWS_REGION: ap-south-1
   AWS_ACCOUNT_ID: '086325458599'
-  ECR_REPOSITORY: roommitra/website
+  PUBLIC_ECR_ALIAS: p1s3y6q3
+  PUBLIC_ECR_REPO: roommitra/api
   INSTANCE_TAG_KEY: Name
   INSTANCE_TAG_VALUE: roommitra-ec2
 
 defaults:
   run:
-    working-directory: ./website
+    working-directory: ./api
 
 jobs:
   build-and-push:
@@ -47,7 +49,7 @@ jobs:
               "blocks": [
                 { "type": "section",
                   "text": { "type": "mrkdwn",
-                    "text": ":alarm_clock: *`website` Build started* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
+                    "text": ":alarm_clock: *`api` Build started* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
                   }
                 },
                 { "type": "context", "elements": [
@@ -66,32 +68,30 @@ jobs:
           role-to-assume: arn:aws:iam::086325458599:role/codedeploy
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Amazon ECR
-        id: ecr
-        uses: aws-actions/amazon-ecr-login@v2
+      # --- PUBLIC ECR login (region must be us-east-1) ---
+      - name: Login to Amazon ECR Public
+        run: |
+          aws ecr-public get-login-password --region us-east-1 \
+            | docker login --username AWS --password-stdin public.ecr.aws
 
       - name: Build & Push with ECR cache
         uses: docker/build-push-action@v5
         with:
-          context: ./website
-          file: ./website/Dockerfile
+          context: ./api
+          file: ./api/Dockerfile
           push: true
           provenance: false
           tags: |
-            ${{ steps.ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
+            public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:latest
           cache-from: |
             type=gha
-            type=registry,ref=${{ steps.ecr.outputs.registry }}/roommitra/website:buildcache
+            type=registry,ref=public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:buildcache
           cache-to: |
             type=gha,mode=max
-            type=registry,ref=${{ steps.ecr.outputs.registry }}/roommitra/website:buildcache,mode=max
+            type=registry,ref=public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:buildcache,mode=max
 
       - name: Find instance by tag
         id: find
@@ -103,18 +103,17 @@ jobs:
 
       - name: Create SSM Parameters file
         run: |
-          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest"
+          IMAGE_URI="public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:latest"
           echo "Resolved IMAGE_URI=$IMAGE_URI"
 
-          cat > /tmp/ssm-params.json <<EOL
+          cat > /tmp/ssm-params.json <<'EOL'
           {
             "commands": [
               "set -euo pipefail",
-              "sudo -u appuser -H bash -lc \"aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}\"",
               "sudo -u appuser -H bash -lc \"docker pull ${IMAGE_URI}\"",
-              "sudo -u appuser -H bash -lc \"docker stop website || true\"",
-              "sudo -u appuser -H bash -lc \"docker rm website || true\"",
-              "sudo -u appuser -H bash -lc \"docker run -d --name website --restart unless-stopped -p 3000:3000 ${IMAGE_URI}\""
+              "sudo -u appuser -H bash -lc \"docker stop api || true\"",
+              "sudo -u appuser -H bash -lc \"docker rm api || true\"",
+              "sudo -u appuser -H bash -lc \"docker run -d --name api --restart unless-stopped -p 4000:4000 ${IMAGE_URI}\""
             ],
             "executionTimeout": ["3600"]
           }
@@ -128,7 +127,7 @@ jobs:
             --region ${{ env.AWS_REGION }} \
             --instance-ids "${{ steps.find.outputs.instance_id }}" \
             --document-name "AWS-RunShellScript" \
-            --comment "Deploy website ${{ github.sha }}" \
+            --comment "Deploy api ${{ github.sha }}" \
             --parameters file:///tmp/ssm-params.json
 
       # Success message
@@ -141,7 +140,7 @@ jobs:
               "blocks": [
                 { "type": "section",
                   "text": { "type": "mrkdwn",
-                    "text": ":white_check_mark: *`website` Build passed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
+                    "text": ":white_check_mark: *`api` Build passed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
                   }
                 },
                 { "type": "context", "elements": [
@@ -164,7 +163,7 @@ jobs:
               "blocks": [
                 { "type": "section",
                   "text": { "type": "mrkdwn",
-                    "text": ":x: *`website` Build failed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
+                    "text": ":x: *`api` Build failed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
                   }
                 },
                 { "type": "context", "elements": [
