--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@ api/.env*
 api/config/*.pem
 webapp/node_modules/
 
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production
+.env.prod
+
+
 # Node
 node_modules/
 dist/
